- Updated - Navigation blocks wp_kses to wp_kses_post
- Updated - core/page-list to use Navigation link markup and styles (not sure why WP complicates things)
- Updated - Allow inline CSS for mark formatting on text blocks (headings, paragraph, lists etc)
- Updated - Gutenberg restricted blocks (skipped by our Styles extension) list
- Fixed - ANR -> Captcha 4WP double captcha containers on comment form.
- Fixed - core/cover bug with solid color only background style
- Added - core/code default styleing
- Added - core/tag-cloud default styleing
- Added - missing "sticky-top" class in gutenberg block Advanced class suggestions

v5.5.0
- Fixed - Grid gap default to 1 rem (--wp--custom--gutter variable)

v5.4.9
- Updated - Get WP core colors from 'default' instead of deprecated 'core' ( [ 'settings', 'color', 'palette', 'default' ] )
- Updated - Home starter content
- Updated - core/latest-posts and core/post-template grid classes
- Updated - core/table and core/calendar to load table CSS
- Updated - core/search width styles output
- Removed - Containers CSS - fully updated to Gutenberg (not needed anymore)
- Removed - Cover block inner container class
- Fixed - Editor preview for outline/link button styles (after transfering most of the properties to theme.json)
- Added - Color classes will also output rgb color value in global styles to allow more styleing flexibility
- Added - Custom Grid classes (experimental): .grid, .span-{number}, .start-{number}
- Added - Custom global styles gutter

v5.4.8
- Updated - Output custom duotones into wp_body_open (previously wp_footer) as per WP updates
- Updated - core/social-link to use global link color set in theme styles
- Updated - Yoast author social profiles rendering improvements / bail early if certain conditions are not met
- Updated - Footer Credits template pass "copy" and "year" variables (copyright symbol and current year)
- Updated - ANR Captcha plugin extension updates after was bought by WPWhiteSecurity